Fix widget text wrapping sometimes

--- a/src/graphics/css/widget.css
+++ b/src/graphics/css/widget.css
@@ -17,4 +17,5 @@ body {
   padding: 1rem;
   font-size: 1.5rem;
   transition: width 2s, opacity 2s;
+  white-space: nowrap;
 }
